# smiles-django-portal

./: .gitignore  MANIFEST.in  README.md  dump.rdb  package-lock.json  requirements.txt  setup.cfg  tempCodeRunnerFile.python
data_catalog/: computational_data_util.py  data_catalog_service.py  metadata_util.py  smiles_dp_util.py  urls.py  views.py
data_catalog/proto/: computational_dp.proto  computational_dp_pb2.py  experimental_dp.proto  experimental_dp_pb2.py  literature_dp.proto  literature_dp_pb2.py
data_catalog/sample_requests/: computational_dp_create_sample1.json
data_catalog/util/: computational_data_util.py
frontend/: dump.rdb  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: global.css
frontend/src/components/: CompDataProductDetails.vue  (+7 more)
smiles/: __init__.py  airavata_portal_service.py  apps.py  celery.py  data_catalog_service.py  metadata_util.py  queue_settings_calculators.py  sharing_service.py  smiles_data_migration.py  smiles_dp_upload.py  smiles_dp_util.py  urls.py  views.py
smiles/proto/: computational_dp.proto  computational_dp_pb2.py  data_catalog_pb2.py  data_catalog_pb2_grpc.py  experimental_dp.proto  experimental_dp_pb2.py  generate-stub.sh  literature_dp.proto  literature_dp_pb2.py
smiles_django/: apps.py  celery.py  data_catalog_service.py  metadata_util.py  queue_settings_calculators.py  settings.py  smiles_dp_util.py  urls.py  views.py
smiles_django/proto/: computational_dp.proto  data_catalog_pb2.py  data_catalog_pb2_grpc.py  generate-stub.sh  literature_dp.proto
(+77 files in other folders)
