[metadata]
name = smiles-django-portal
version = 0.1.0
description = SMILES Django Portal

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    airavata-django-portal-sdk
    django-cors-headers >= 3.13.0
    protobuf >= 4.22.1
    ijson >= 3.1.4
    celery >= 5.2.7
    redis >= 4.5.2

[options.entry_points]
airavata.djangoapp =
    smiles=smiles.apps:SmilesDjangoPortalConfig
