[metadata]
name = smiles-django-portal
version = 0.1.0
description = SMILES Django Portal

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    airavata-django-portal-sdk
    django-cors-headers
    # protobuf >= 4.22.1
    ijson
    celery
    redis

[options.entry_points]
airavata.djangoapp =
    smiles=smiles.apps:SmilesDjangoPortalConfig
